--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
     </div>
 
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
 
 </body>
 </html>
